[package]
name = "dracker"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
axum = "0.8"
chrono = "0.4.43"
dotenv = "0.15"
sea-orm = { version = "1.1", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-mysql",
] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }
