[workspace]
members = [".", "migration"]

[package]
name = "admin-api-pmi"
version = "1.2.5"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["cookie"] }
base64 = "0.22"
chrono = "0.4"
cookie = "0.18"
csv = "1.3"
dotenv = "0.15"
futures = "0.3"
google-cloud-storage = { version = "0.24", default-features = false, features = [
  "auth",
  "rustls-tls",
] }
hex = "0.4"
jsonwebtoken = "10.3"
lettre = { version = "0.11", features = [
  "builder",
  "rustls-tls",
  "smtp-transport",
], default-features = false }
psl = "2.1"
rand = "0.10"
sea-orm = { version = "1.1", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-mysql",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
slug = "0.1"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.18", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }
